# PQFL_Schizophrenia_Full_Project

./: .gitignore  Global_SZ_fMRI_Dataset_Catalog.docx  data_inventory.txt  inventory.py  site_effect_analysis.txt
pqfl_project/: brainlat_diag.py  brainlat_redownload.py  check_training_compat.py  cobre_adapter.py  cobre_adapter_v2.py  cobre_adapter_v3.py  decode_dsm.py  decode_primary_dx.py  find_diagnosis.py  fix_la5c_swap.py  inspect_cobre_figshare.py  inspect_h5.py  inventory.py  kaggle_4class_adapter.py  la5c_4class_adapter.py  pyproject.toml  quarantine_drop_datasets.py  tier1_enhanced_training.py  transdiagnostic_adapter.py  verify_all_data.py  verify_and_discover.py  worklog.md
pqfl_project/configs/: default.yaml  site_bsnip.yaml  site_cobre.yaml  site_fbirn.yaml  site_la5c.yaml  site_mcic.yaml  site_srpbs.yaml  site_tcp.yaml
pqfl_project/experiments/: analyze_significance.py  demo_e2e.py  evaluate_pqfl_cv.py  final_training.py  generate_figures.py  generate_report.py  hyperparameter_sweep.py  train_federated.py  train_pqfl_phase2.py  visualize_results.py
pqfl_project/pqfl/: __init__.py
pqfl_project/scripts/: check_dataset_status.py  check_download_status.py  diagnose_bold_dimensions.py  diagnose_data.py  download_all_datasets.py  download_brainlat.py  download_datasets.py  download_datasets.sh  download_la5c_confounds.py  download_transdiagnostic_v2.py  fix_la5c_structure.py  inspect_la5c_files.py  integrate_datasets.py  preprocess_all_datasets.py  preprocess_new_datasets.py  preprocess_real_data.py  smart_download.py  test_adapters.py  (+1 more)
(+56 files in other folders)
