[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqfl"
version = "0.1.0"
description = "Personalized Quantum Federated Learning for Schizophrenia fMRI Classification"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pennylane>=0.35.0",
    "pennylane-lightning",
    "torch>=2.1.0",
    "geomstats>=2.8.0",
    "pyriemann>=0.7",
    "nilearn>=0.10.0",
    "nibabel>=5.0",
    "neurocombat>=0.2.12",
    "flwr>=1.5.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "mlflow>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tqdm>=4.65",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "ipython>=8.0",
]
gpu = [
    "pennylane-lightning-gpu",
]
full = [
    "bctpy>=0.6.1",
    "templateflow>=0.8",
    "fmriprep",
]

[tool.setuptools.packages.find]
include = ["pqfl*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
